--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -33,7 +33,7 @@
 
             <div class="wui-i-description xa-description cl">
                 <div class="wui-i-description-content">
-                    <div class="wui-i-product-title">{{component.model.title}}</div>
+                    <div class="wui-i-product-title">{{component.model.product.productName}}</div>
                     <div class="wui-i-product-price-group none">
                         <span class="wui-i-product-price-group-title">团购价</span>
                         <span class="wui-i-product-price-group-original-price">240元</span>
@@ -45,7 +45,7 @@
                     <div class="wui-i-choose_group_box">
                         <div class="wui-i-choose_title_box">
                             <span class="wui-i-choose_title">选择团购</span>
-                            <span class="wui-i-end_time">开团截止日期：{{component.model.end_time}}</span>
+                            <span class="wui-i-end_time">开团截止日期：{{component.model.end_time }}</span>
                         </div>
                         <div class="wui-i-choose_items_box">
                             <ul
