--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -315,7 +315,7 @@
 
     function updateBtnStatus(){
         if('进行中' != W.activityStatus){
-            if('未开始' == W.activityStatus){
+            if('未开启' == W.activityStatus){
                 $('.wa-notready').show();
             }else{
                 $('.wa-closed').show();
