--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -92,7 +92,7 @@
                        <div class="wui-i-powerbar_group">
                             <div class="wui-i-box">
                                 <div class="wui-i-bar">
-                                    <div class="wui-i-inner_bar">
+                                    <div class="wui-i-inner_bar xa-i-bar_process">
                                         <div class="wui-i-cur_number">0人</div>
                                         <div class="wui-i-circle"></div>
                                     </div>
