手机端日期fix

--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -45,7 +45,7 @@
                     <div class="wui-i-choose_group_box">
                         <div class="wui-i-choose_title_box">
                             <span class="wui-i-choose_title">选择团购</span>
-                            <span class="wui-i-end_time">开团截止日期：{{component.model.end_time }}</span>
+                            <span class="wui-i-end_time">开团截止日期：{{ component.model.end_time|space_split_0 }}</span>
                         </div>
                         <div class="wui-i-choose_items_box">
                             <ul
