--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -2,6 +2,9 @@
 
 {% block css %}
 <style type="text/css">
+    .wui-group-container .wui-i-body {
+         padding-bottom: 18px;
+    }
 	h1 {
 		color: #00F;
 	}
