--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -117,6 +117,9 @@
         background-position-y: 100%;
         background-position-x: 50%;
     }
+    .wui-i-btngroup {
+        margin-bottom: 10px;
+    }
 </style>
 {% endblock %}
 
