--- a/weapp/apps/customerized_apps/group/templates/editor/groups.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/groups.html
@@ -198,7 +198,7 @@
                             class="xui-ellipsisFox"
                             limit="15"
                             href="/apps/group/group/?id=${item.id}&related_page_id=${item.related_page_id}">
-                                ${item.name}
+                                {{html item.name}}
                         </a>
                     </div>
                 </td>
