--- a/weapp/apps/customerized_apps/group/templates/editor/groups.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/groups.html
@@ -216,7 +216,7 @@
 					   <a
 						class="xui-ellipsisFox"
 						limit="15"
-						href="/mall2/product/?id=${item.product_id}&source=onshelf">
+						href="/mall2/product/?id=${item.product_id}">
 							${item.product_name}
 						</a>
 					</div>
