--- a/weapp/apps/customerized_apps/group/templates/editor/groups.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/groups.html
@@ -317,23 +317,23 @@
             <label>选择团购成功的消息模板：
                 <select class="form-control xa-template-selector" style="width: 50%">
                     {{#each templates}}
-                        <option value="{{ template_id }}" {{#ifCond ../success_selected_id "==" template_id}}selected{{/ifCond}}>{{ template_title }}</option>
+                        <option value="{{ template_id }}" {{#ifCond ../success.selected_id "==" template_id}}selected{{/ifCond}}>{{ template_title }}</option>
                     {{/each}}
                 </select>
             </label>
-            <label>开头描述：<input type="text" class="form-control xa-template-first"></label>
-            <label>结尾描述：<input type="text" class="form-control xa-template-remark"></label>
+            <label>开头描述：<input type="text" class="form-control xa-template-first" value="{{ ../success.first }}"></label>
+            <label>结尾描述：<input type="text" class="form-control xa-template-remark" value="{{ ../success.remark }}"></label>
         </div>
         <div class="xui-i-setting xui-i-fail-setting xa-fail-setting">
             <label>选择团购失败的消息模板：
                 <select class="form-control xa-template-selector" style="width: 50%">
                     {{#each templates}}
-                        <option value="{{ template_id }}" {{#ifCond ../fail_selected_id "==" template_id}}selected{{/ifCond}}>{{ template_title }}</option>
+                        <option value="{{ template_id }}" {{#ifCond ../fail.selected_id "==" template_id}}selected{{/ifCond}}>{{ template_title }}</option>
                     {{/each}}
                 </select>
             </label>
-            <label>开头描述：<input type="text" class="form-control xa-template-first"></label>
-            <label>结尾描述：<input type="text" class="form-control xa-template-remark"></label>
+            <label>开头描述：<input type="text" class="form-control xa-template-first" value="{{ ../fail.first }}"></label>
+            <label>结尾描述：<input type="text" class="form-control xa-template-remark" value="{{ ../fail.remark }}"></label>
         </div>
         <div class="xui-i-preview">
 
@@ -492,8 +492,31 @@ $(document).ready(function() {
                 var control = data.control_data;
                 var success_data = control.success;
                 var fail_data = control.fail;
-                data['success_selected_id'] = !$.isEmptyObject(success_data) && success_data.template_id;
-                data['fail_selected_id'] = !$.isEmptyObject(fail_data) && fail_data.template_id;
+                var noop_data = {
+                    "selected_id": "",
+                    "first": "",
+                    "remark": ""
+                };
+                if(!$.isEmptyObject(success_data)){
+                    data['success'] = {
+                        "selected_id": success_data.template_id,
+                        "first": success_data.first,
+                        "remark": success_data.remark
+                    };
+                }else{
+                    data['success'] = noop_data;
+                }
+
+                if(!$.isEmptyObject(fail_data)){
+                    data['fail'] = {
+                        "selected_id": fail_data.template_id,
+                        "first": fail_data.first,
+                        "remark": fail_data.remark
+                    };
+                }else{
+                    data['fail'] = noop_data;
+                }
+
             }
             var $node = $(this.getTemplate(data));
             this.$el.html($node);
