将微众卡查询的结果的有效期->截至时间

--- a/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_info_normal.html
+++ b/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_info_normal.html
@@ -37,7 +37,7 @@
 					{% endif %}
 				</span>
 			</p>
-			<p class="xui-valid-time" style="padding-bottom:3%;">有效期：{{ weizoom_card.valid_time_from }}至{{ weizoom_card.valid_time_to }}</p>
+			<p class="xui-valid-time" style="padding-bottom:3%;">截至时间：{{ weizoom_card.valid_time_from }}至{{ weizoom_card.valid_time_to }}</p>
 		</div>
 	</div>
 	<div class="xui-submitWzOther">
