--- a/weapp/apps/customerized_apps/group/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/workbench.html
@@ -34,6 +34,54 @@
             width: 80% !important;
             margin-left: 50px;
         }
+
+        .xui-image-dialog-trigger{
+          background: url('/static_v2/img/termite2/addImgBtn.png') no-repeat;
+          width: 100px;
+          height: 100px;
+          border: none;
+        }
+        .xui-triggerButton-hasdata{
+          margin-top: -25px !important;
+          text-align: center !important;
+          width: 100px;
+          background: rgba(0,0,0, 0.5);
+          color: white;
+          height: 25px;
+          font-weight: bold;
+          position: absolute;
+        }
+
+        .propertyGroup_property_dialogSelectField .xui-i-triggerButton {
+          text-align: left;
+          margin: 0px;
+          padding: 0px;
+        }
+
+        /*appkit.lotterydescription 组件图片移除按钮*/
+        button.xui-deleteImageButton{
+          position: absolute;
+          top:-11px;
+          margin-left: 85px;
+          font-size: 14px;
+          z-index: 1;
+          background: none;
+          border: none;
+        }
+        .xui-deleteImageButton span{
+          color: #fff;
+          display: block;
+          width: 20px;
+          height: 20px;
+          background: rgba(0,0,0,0.45);
+          border-radius: 50%;
+        }
+
+        .xui-dynamicComponentControlImgBox .xui-removeImageButton{
+          display: none;
+        }
+
+
 {#        .xui-propertyView-app-GroupInfo .xui-i-triggerButton{#}
 {#            background: url('/static_v2/img/termite2/addImgBtn.png') no-repeat;#}
 {#            width: 100px;#}
