按钮的调整，样式的调整

--- a/weapp/apps/customerized_apps/group/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/workbench.html
@@ -8,13 +8,13 @@
 
         .xui-propertyView-app-DynamicGroupList div{
             display: inline-block;
-            margin-left: 2px;
+            /*margin-left: 2px;*/
         }
         div.xui-addDynamicComponent{
             width: 80px;
             height: 30px;
             line-height: 30px;
-            margin-left: 47px !important;
+            margin-left: 71px !important;
             color:#888 !important;
         }
         div.xui-addDynamicComponent span{
@@ -22,24 +22,30 @@
         }
         .btn.xui-i-triggerButton.xui-i-searchBtn{
             position: relative;
-            left: 150px;
-            top: -23px;
+            left: 3.5px;
+            top: 0px;
             height: 23px;
             text-align: center;
             line-height: 23px;
             padding: 0px;
+            margin-bottom: 10px;
         }
         .xui-propertyView-app-GroupInfo textarea{
             height: 100px;
             width: 80% !important;
             margin-left: 50px;
         }
+        .xui-propertyView-app-GroupInfo .propertyGroup_property[data-field-anchor="share_description"]{
+          margin-top: 15px;
+          margin-left: 4px;
 
+        }
         .xui-image-dialog-trigger{
           background: url('/static_v2/img/termite2/addImgBtn.png') no-repeat;
           width: 100px;
           height: 100px;
           border: none;
+          margin-left: 4px;
         }
         .xui-triggerButton-hasdata{
           margin-top: -25px !important;
