--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -514,11 +514,11 @@
                         <div class="propertyGroup_property_label {{if field.validate}}star_show{{/if}}">${field.displayName}</div>
                         <div class="propertyGroup_property_input" style="position:relative;width:20%">
                             <input class="propertyGroup_property_input" data-field="${field.name}" name="${field.name}" data-type="product" type="hidden"/>
-                            <input class="propertyGroup_property_input product_search"  name="product_name" data-type="product_name" value="{{if component.model.get(field.name)}}${component.model.get(field.name).productName}{{else}}{{/if}}"/>
+                            <input class="propertyGroup_property_input product_search"  name="product_name" data-type="product_name" value="{{if component.model.get(field.name)}}${component.model.get(field.name).productName}{{else}}{{/if}}" type="hidden"/>
 
-                                <button class="btn xui-i-searchBtn xui-i-triggerButton" data-target-dialog="${field.dialog}">
-                                   搜索
-                                </button>
+                            <button class="btn xui-i-searchBtn xui-i-triggerButton" data-target-dialog="${field.dialog}">
+                               选择商品
+                            </button>
                             {{if component.model.get(field.name)}}
                                <div>
                                   {{html W.data.getDynamicComponentDataForDialogSelectControl(component, field)}}
