部分验证和样式

--- a/weapp/apps/customerized_apps/group/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/workbench.html
@@ -5,16 +5,18 @@
 {% block css %}
     <style>
 
-
+        .propertyGroup_property_horizontalField .propertyGroup_property_label{
+              width: 70px;
+        }
         .xui-propertyView-app-DynamicGroupList div{
             display: inline-block;
-            /*margin-left: 2px;*/
+            margin-left: 2px;
         }
         div.xui-addDynamicComponent{
             width: 80px;
             height: 30px;
             line-height: 30px;
-            margin-left: 71px !important;
+            margin-left: 81px !important;
             color:#888 !important;
         }
         div.xui-addDynamicComponent span{
@@ -33,7 +35,7 @@
         .xui-propertyView-app-GroupInfo textarea{
             height: 100px;
             width: 80% !important;
-            margin-left: 50px;
+            margin-left: 60px;
         }
         .xui-propertyView-app-GroupInfo .propertyGroup_property[data-field-anchor="share_description"]{
           margin-top: 15px;
